--- a/index.html
+++ b/index.html
@@ -266,51 +266,65 @@
                 </ul>
             </div >
         </section>
+
+    <!-------------------------------------CUSTOMER--------------------------------->
         <section class="customers section">
             <div class="container">
                 <h2 class="customers-title title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56" >
-                                <use href="./images/customers-logo.svg#icon-Logo1"></use>
-                            </svg>
-                        </a>
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo1"></use>
+                                </svg>
+                            </a>
+                        </div>
+                    </li>
+                   <li class="cutomers-list-item">
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo2"></use>
+                                </svg>
+                            </a>
+                        </div >
                     </li>
                     <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56">
-                                <use href="./images/customers-logo.svg#icon-Logo2"></use>
-                            </svg>
-                        </a>
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo3"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56">
-                                <use href="./images/customers-logo.svg#icon-Logo3"></use>
-                            </svg>
-                        </a>
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo4"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56">
-                                <use href="./images/customers-logo.svg#icon-Logo4"></use>
-                            </svg>
-                        </a>
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo5"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56">
-                                <use href="./images/customers-logo.svg#icon-Logo5"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="cutomers-list-item">
-                        <a href="">
-                            <svg class="customer-icon" width="104" height="56">
-                                <use href="./images/customers-logo.svg#icon-Logo6"></use>
-                            </svg>
-                        </a>
+                        <div class="customer">
+                            <a href="">
+                                <svg class="customer-icon" width="104" height="56">
+                                    <use href="./images/customers-logo.svg#icon-Logo6"></use>
+                                </svg>
+                            </a>
+                        </div >
                     </li>
                 </ul>
             </div>
@@ -330,32 +344,40 @@
                 <p class="footer-social-media-text">Social media</p>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
-                        <a href="" class="soc-link-footer link">
-                            <svg class="soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
+                        <div class="footer-soc-item-content">
+                            <a href="" class="soc-link-footer link">
+                                <svg class="soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="footer-soc-item">
-                        <a href="" class="soc-link-footer link">
-                            <svg class="soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
+                        <div class="footer-soc-item-content">
+                            <a href="" class="soc-link-footer link">
+                                <svg class="soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="footer-soc-item">
-                        <a href="" class="soc-link-footer link">
-                            <svg class="soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
+                        <div class="footer-soc-item-content">
+                            <a href="" class="soc-link-footer link">
+                                <svg class="soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </div>
                     </li>
                     <li class="footer-soc-item">
-                        <a href="" class="soc-link-footer link">
-                            <svg class="soc-icon" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
+                        <div class="footer-soc-item-content">
+                            <a href="" class="soc-link-footer link">
+                                <svg class="soc-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </div >
                     </li>
                 </ul>
             </div>
