--- a/index.html
+++ b/index.html
@@ -273,58 +273,47 @@
                 <h2 class="customers-title title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo1"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
                    <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo2"></use>
                                 </svg>
                             </a>
-                        </div >
+
                     </li>
                     <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo3"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo4"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo5"></use>
                                 </svg>
                             </a>
-                        </div>
                     </li>
                     <li class="cutomers-list-item">
-                        <div class="customer">
-                            <a href="">
+                            <a class="customer-link" href="">
                                 <svg class="customer-icon" width="104" height="56">
                                     <use href="./images/customers-logo.svg#icon-Logo6"></use>
                                 </svg>
                             </a>
-                        </div >
                     </li>
                 </ul>
             </div>
@@ -337,51 +326,44 @@
             <div class="footer-text-info">
                 <a class="footer-logo link" href="./index.html" target="_blank" rel="noopener noreferrer nofollow">Web<span
                         class="logo-second-word">Studio</span></a>
-                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
+                    growth
                     solutions.</p>
-            </div >
+            </div>
             <div class="footer-social-media">
                 <p class="footer-social-media-text">Social media</p>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
-                        <div class="footer-soc-item-content">
-                            <a href="" class="soc-link-footer link">
-                                <svg class="soc-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <a href="" class="soc-link-footer link">
+                            <svg class="soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="footer-soc-item">
-                        <div class="footer-soc-item-content">
-                            <a href="" class="soc-link-footer link">
-                                <svg class="soc-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <a href="" class="soc-link-footer link">
+                            <svg class="soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="footer-soc-item">
-                        <div class="footer-soc-item-content">
-                            <a href="" class="soc-link-footer link">
-                                <svg class="soc-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </div>
+                        <a href="" class="soc-link-footer link">
+                            <svg class="soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
                     </li>
                     <li class="footer-soc-item">
-                        <div class="footer-soc-item-content">
-                            <a href="" class="soc-link-footer link">
-                                <svg class="soc-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </div >
+                        <a href="" class="soc-link-footer link">
+                            <svg class="soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
             </div>
-        </div >
+        </div>
     </footer>
 </body>
 </html>
